--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Asteroids Game</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>Asteroids Game Pt. 1</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Stars.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Left: Left Arrow Key
+		    Right: Right Arrow Key
+		    Accelerate: Up Arrow Key
+		    Hyperspace: Spacebar 
 	    </footer>
 	</body>
 </html>
