--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Left: Left Arrow Key <br>
-		    Right: Right Arrow Key<br>
-		    Accelerate: Up Arrow Key<br>
+		    Left: Left Arrow Key <br/>
+		    Right: Right Arrow Key<br/>
+		    Accelerate: Up Arrow Key<br/>
 		    Hyperspace: Spacebar 
 	    </footer>
 	</body>
