changed instructions and bullets shoot

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 		    Left: Left Arrow Key <br/>
 		    Right: Right Arrow Key<br/>
 		    Accelerate: Up Arrow Key<br/>
-		    Hyperspace: Spacebar 
+		    Decelerate: Down Arrow Key <br/>
+		    Shoot: Spacebar <br/>
+		    Hyperspace: Enter 
 	    </footer>
 	</body>
 </html>
