--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>Asteroids Game Pt. 1</h1>
+			<h1>Asteroids Game</h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="Asteroid.pde AsteroidsGame.pde Bullet.pde Floater.pde Health.pde Spaceship.pde Stars.pde">
